Upload Hython-v1 class:ASTNode

--- a/2.hython-v1/makefile
+++ b/2.hython-v1/makefile
@@ -1,8 +1,8 @@
 all: grammer main.cpp
-	g++ -std=c++11 -I./include -I./include/antlr -L./lib -o ./bin/hython main.cpp ./src/*.c -lantlr3c
+	g++ -std=c++11 -I./include -I./include/antlr -L./lib -o ./bin/hython main.cpp ./src/*.c ./src/*.cc -lantlr3c
 
 debug: grammer main.cpp
-	g++ -DDEBUG -std=c++11 -I./include -I./include/antlr -L./lib -o ./bin/hython main.cpp ./src/*.c -lantlr3c
+	g++ -DDEBUG -std=c++11 -I./include -I./include/antlr -L./lib -o ./bin/hython main.cpp ./src/*.c ./src/.*cc -lantlr3c
 
 grammer: ./thirdpart/hython.g
 	java -jar ./thirdpart/antlr-3.4-complete.jar ./thirdpart/hython.g
