--- a/2.hython-v1/makefile
+++ b/2.hython-v1/makefile
@@ -2,7 +2,7 @@ all: grammer main.cpp
 	g++ -std=c++11 -I./include -I./include/antlr -L./lib -o ./bin/hython main.cpp ./src/*.c ./src/*.cc -lantlr3c
 
 debug: grammer main.cpp
-	g++ -DDEBUG -std=c++11 -I./include -I./include/antlr -L./lib -o ./bin/hython main.cpp ./src/*.c ./src/.*cc -lantlr3c
+	g++ -DDEBUG -std=c++11 -I./include -I./include/antlr -L./lib -o ./bin/hython main.cpp ./src/*.c ./src/*.cc -lantlr3c
 
 grammer: ./thirdpart/hython.g
 	java -jar ./thirdpart/antlr-3.4-complete.jar ./thirdpart/hython.g
@@ -12,4 +12,5 @@ grammer: ./thirdpart/hython.g
 
 run:
 	./bin/hython ./testdata/input1
+	./bin/hython ./testdata/input2
 
