--- a/2.hython-v1/makefile
+++ b/2.hython-v1/makefile
@@ -13,4 +13,6 @@ grammer: ./thirdpart/hython.g
 run:
 	./bin/hython ./testdata/input1
 	./bin/hython ./testdata/input2
+	./bin/hython ./testdata/input3
+
 
