--- a/2.hython-v1/makefile
+++ b/2.hython-v1/makefile
@@ -14,5 +14,6 @@ run:
 	./bin/hython ./testdata/input1
 	./bin/hython ./testdata/input2
 	./bin/hython ./testdata/input3
+	./bin/hython ./testdata/input4
 
 
